a2a/0.1/modules/ROOT/pages/a2a-connector-reference.adoc
= A2A Connector 0.1.0-BETA Reference

Anypoint Connector for Agent2Agent (A2A) (A2A Connector) provides A2A protocol support for LLM agents, enabling your agents to talk to other agents.

[NOTE]
====
Anypoint Connector for Agent2Agent (A2A) is a beta connector that is subject to the Beta Services Terms at https://www.salesforce.com/company/legal/[Agreements - Salesforce.com] or a written Unified Pilot Agreement if executed by Customer, and the Non-GA Gen AI and Non-GA Credit Consumption terms in the https://ptd.salesforce.com/?_ga=2.247987783.1372150065.1709219475-629000709.1639001992[Product Terms Directory]. Use of this beta connector with external systems or services consumes xref:general::usage-metrics.adoc[Mule messages] and is at the Customer's sole discretion. 
====

== Configurations

[[Client]]
=== Client

The application or AI system that initiates requests and consumes services offered by A2A servers. This allows Mule apps to act as A2A brokers between non A2A “head” agents and A2A “node” agents.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ClientConnection, Client Connection>>
 | The connection types to provide to this configuration. | | x
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===

==== Connection Types

[[ClientConnection]]
===== Client Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Server Url a| String |  Base URL of the target A2A server. |  | x
| Request Timeout a| Number | Sets the duration to wait for server responses before timing out requests. |  30 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Request Timeout* field. |  SECONDS | 
| Authentication a| HttpRequestAuthentication |  |  | 
| Tls Context a| <<Tls>> |  |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===


---
[[Server]]
=== Server

The A2A server acts as a remote agent that exposes an HTTP(S) endpoint and implements the A2A protocol methods for interacting with other AI agents. This allows Mule-based agents to receive and respond to A2A protocol-compliant requests.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ServerConnection, Connection>> | The connection types to provide to this configuration. | | x
| Card a| <<AgentCard>> |  |  | x
| Name a| String | ID used to reference this configuration. |  | x
| Task History Enabled a| Boolean | Set to `true` to enable retrieval of task history. Task history is stored as message objects. |  false | 
| Default Max History Length a| Number | Maximum number of task history objects to store.  |  | 
| Task History Object Store a| ObjectStore |  |  | 
|===

==== Connection Types

[[ServerConnection]]
===== Server Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Listener Config a| String |  Reference to the `<http:listener-config>` used to expose the inbound endpoint. |  | x
| Agent Path a| String | URL where the Agent Card is located. |  | x
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===


==== Associated Sources

* <<TaskListener>> 


== Supported Operations

* <<CancelTask>> 
* <<GetTask>> 
* <<SendTask>> 


[[CancelTask]]
== Cancel Task
`<a2a:cancel-task>`

Cancels the task specified by its unique identifier. It's used to stop a previously initiated task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Id a| Any | Unique identifier for the task. |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:UNAUTHORIZED 


[[GetTask]]
== Get Task
`<a2a:get-task>`

Retrieves information about a task based on a provided query. This enables you to fetch the status or details of a task from another agent.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Query a| Any |  |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:UNAUTHORIZED 


[[SendTask]]
== Send Task
`<a2a:send-task>`

Sends a task to another agent. It initiates a new task request to a remote A2A server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task a| Any |  |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:UNAUTHORIZED 


== Sources

[[TaskListener]]
== Task Listener
`<a2a:task-listener>`

Allows a Mule application to listen for and receive incoming A2A protocol-compliant requests from other AI agents, enabling the Mule-based agent to act as an A2A server and respond to tasks.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
| Response a| Any |  |  #[payload] | 
| Response Headers a| Object | HTTP response header.  |  | 
| Error Status Code a| Number | HTTP status code of the response. |  500 | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 


== Types

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  | 
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  | 
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  | 
| Password a| String | Password used to protect the truststore. |  | 
| Type a| String | Type of store. |  | 
| Algorithm a| String | Encryption algorithm that the truststore uses. |  | 
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  | 
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  | 
| Type a| String | Type of store. |  | 
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  | 
| Key Password a| String | Password used to protect the private key. |  | 
| Password a| String | Password used to protect the keystore. |  | 
| Algorithm a| String | Encryption algorithm that the keystore uses. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  | 
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  | 
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`

Don't use the secondary method to check certificate validity. |  | 
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  | 
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  | 
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true  | 
| Count a| Number | How many reconnection attempts the Mule app can make. |  | 
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[ResponseAttributes]]
=== Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===

[[AgentCard]]
=== Agent Card

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | Name for the agent. |  | x
| Url a| String | Base URL endpoint for the agent's A2A service. Must be an absolute HTTPS URL for production. |  | x
| Version a| String | Version for the agent. |  | x
| Description a| String | Description for the agent. |  | 
| Skills a| Array of <<AgentSkill>> |  |  | x
| Capabilities a| <<AgentCapabilities>> |  |  | 
| Provider a| <<AgentProvider>> |  |  | 
| Documentation Url a| String | URL of the agent's documentation.  |  | 
| Agent Authentication a| <<AgentAuthentication>> |  |  | 
| Default Input Modes a| Array of String | Array of MIME types the agent accepts as input across all skills. |  | 
| Default Output Modes a| Array of String | Array of MIME types the agent produces as output across all skills.  |  | 
|===

[[AgentSkill]]
=== Agent Skill

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Id a| String | Unique identifier for this skill within the context of this agent. |  | x
| Name a| String | Name of the skill. |  | x
| Description a| String | Description of what the skill does.  |  | 
| Tags a| Array of String | Keywords or categories for discoverability of the agent. |  | 
| Examples a| Array of String | Example prompts, inputs, or use cases. Examples help clients and agents formulate requests for this skill. |  | 
| Input Modes a| Array of String | Overrides Agent Card *Default Input Modes* for this specific skill. |  | 
| Output Modes a| Array of String | Overrides Agent Card *Default Output Modes* for this specific skill. |  | 
|===

[[AgentCapabilities]]
=== Agent Capabilities

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Streaming a| Boolean | Set to `true` to support SSE streaming methods. | false | 
| Push Notifications a| Boolean | Set to `true` to support push notification methods. | false | 
| State Transition History a| Boolean |  | false | 
|===

[[AgentProvider]]
=== Agent Provider

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Organization a| String | Name of the organization or entity. |  | x
| Url a| String | URL of the provider's website. |  | 
|===

[[AgentAuthentication]]
=== Agent Authentication

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Authentication a| Array of String |  |  | x
| Credentials a| String |  |  | 
|===

[[RequestAttributes]]
=== Request Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Query Params a| Object |  |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times to process a redelivered request unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  | 
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  | 
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | One or more expressions that determine if a message was redelivered. This property can be set only if the *Use Secure Hash* field is `false`. |  | 
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message. |  | 
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  | 
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  | 
|===


== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:index.adoc[A2A Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]